--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ subjects:
 - !lcsh 'Christian life -- Juvenile fiction'
 - !lcsh 'Boys -- Juvenile fiction'
 - !lcsh 'Halifax (N.S.) -- Juvenile fiction'
+- GITenberg
 title: 'Bert Lloyd''s Boyhood: A Story from Nova Scotia'
 url: http://www.gutenberg.org/ebooks/25358
